# kava-cpp

./: .gitignore  CMakeLists.txt  main.cpp
data/mnist/: get_mnist.sh
kava/: Blob.cpp  Blob.h  Kava.cpp  Kava.h  blob.cpp  blob.h
kava/layers/: AveragePoolingLayer.cpp  AveragePoolingLayer.h  ConvolutionalLayer.cpp  ConvolutionalLayer.h  DataLayer.cpp  DataLayer.h  EuclideanLossLayer.cpp  EuclideanLossLayer.h  InnerProductLayer.cpp  InnerProductLayer.h  Layer.cpp  Layer.h  MNISTDataLayer.cpp  MNISTDataLayer.h  MaxPoolingLayer.cpp  MaxPoolingLayer.h  ReLULayer.cpp  ReLULayer.h  SoftmaxWithLossLayer.cpp  SoftmaxWithLossLayer.h
kava/utils/: FileUtils.cpp  FileUtils.h  MathUtils.cpp  MathUtils.h  RandomUtils.cpp  RandomUtils.h
kava/weightfillers/: ConstantWeightFiller.cpp  ConstantWeightFiller.h  GaussianWeightFiller.cpp  GaussianWeightFiller.h  MSRAWeightFiller.cpp  MSRAWeightFiller.h  WeightFiller.cpp  WeightFiller.h  XavierWeightFiller.cpp  XavierWeightFiller.h
