cmake_minimum_required(VERSION 3.8)
project(kava_cpp)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_FLAGS "-O3")

set(SOURCE_FILES
        kava/Eigen/src/Cholesky/LDLT.h
        kava/Eigen/src/Cholesky/LLT.h
        kava/Eigen/src/Cholesky/LLT_LAPACKE.h
        kava/Eigen/src/CholmodSupport/CholmodSupport.h
        kava/Eigen/src/Core/arch/AltiVec/Complex.h
        kava/Eigen/src/Core/arch/AltiVec/MathFunctions.h
        kava/Eigen/src/Core/arch/AltiVec/PacketMath.h
        kava/Eigen/src/Core/arch/AVX/Complex.h
        kava/Eigen/src/Core/arch/AVX/MathFunctions.h
        kava/Eigen/src/Core/arch/AVX/PacketMath.h
        kava/Eigen/src/Core/arch/AVX/TypeCasting.h
        kava/Eigen/src/Core/arch/AVX512/MathFunctions.h
        kava/Eigen/src/Core/arch/AVX512/PacketMath.h
        kava/Eigen/src/Core/arch/CUDA/Complex.h
        kava/Eigen/src/Core/arch/CUDA/Half.h
        kava/Eigen/src/Core/arch/CUDA/MathFunctions.h
        kava/Eigen/src/Core/arch/CUDA/PacketMath.h
        kava/Eigen/src/Core/arch/CUDA/PacketMathHalf.h
        kava/Eigen/src/Core/arch/CUDA/TypeCasting.h
        kava/Eigen/src/Core/arch/Default/Settings.h
        kava/Eigen/src/Core/arch/NEON/Complex.h
        kava/Eigen/src/Core/arch/NEON/MathFunctions.h
        kava/Eigen/src/Core/arch/NEON/PacketMath.h
        kava/Eigen/src/Core/arch/SSE/Complex.h
        kava/Eigen/src/Core/arch/SSE/MathFunctions.h
        kava/Eigen/src/Core/arch/SSE/PacketMath.h
        kava/Eigen/src/Core/arch/SSE/TypeCasting.h
        kava/Eigen/src/Core/arch/ZVector/Complex.h
        kava/Eigen/src/Core/arch/ZVector/MathFunctions.h
        kava/Eigen/src/Core/arch/ZVector/PacketMath.h
        kava/Eigen/src/Core/functors/AssignmentFunctors.h
        kava/Eigen/src/Core/functors/BinaryFunctors.h
        kava/Eigen/src/Core/functors/NullaryFunctors.h
        kava/Eigen/src/Core/functors/StlFunctors.h
        kava/Eigen/src/Core/functors/TernaryFunctors.h
        kava/Eigen/src/Core/functors/UnaryFunctors.h
        kava/Eigen/src/Core/products/GeneralBlockPanelKernel.h
        kava/Eigen/src/Core/products/GeneralMatrixMatrix.h
        kava/Eigen/src/Core/products/GeneralMatrixMatrix_BLAS.h
        kava/Eigen/src/Core/products/GeneralMatrixMatrixTriangular.h
        kava/Eigen/src/Core/products/GeneralMatrixMatrixTriangular_BLAS.h
        kava/Eigen/src/Core/products/GeneralMatrixVector.h
        kava/Eigen/src/Core/products/GeneralMatrixVector_BLAS.h
        kava/Eigen/src/Core/products/Parallelizer.h
        kava/Eigen/src/Core/products/SelfadjointMatrixMatrix.h
        kava/Eigen/src/Core/products/SelfadjointMatrixMatrix_BLAS.h
        kava/Eigen/src/Core/products/SelfadjointMatrixVector.h
        kava/Eigen/src/Core/products/SelfadjointMatrixVector_BLAS.h
        kava/Eigen/src/Core/products/SelfadjointProduct.h
        kava/Eigen/src/Core/products/SelfadjointRank2Update.h
        kava/Eigen/src/Core/products/TriangularMatrixMatrix.h
        kava/Eigen/src/Core/products/TriangularMatrixMatrix_BLAS.h
        kava/Eigen/src/Core/products/TriangularMatrixVector.h
        kava/Eigen/src/Core/products/TriangularMatrixVector_BLAS.h
        kava/Eigen/src/Core/products/TriangularSolverMatrix.h
        kava/Eigen/src/Core/products/TriangularSolverMatrix_BLAS.h
        kava/Eigen/src/Core/products/TriangularSolverVector.h
        kava/Eigen/src/Core/util/BlasUtil.h
        kava/Eigen/src/Core/util/Constants.h
        kava/Eigen/src/Core/util/DisableStupidWarnings.h
        kava/Eigen/src/Core/util/ForwardDeclarations.h
        kava/Eigen/src/Core/util/Macros.h
        kava/Eigen/src/Core/util/Memory.h
        kava/Eigen/src/Core/util/Meta.h
        kava/Eigen/src/Core/util/MKL_support.h
        kava/Eigen/src/Core/util/NonMPL2.h
        kava/Eigen/src/Core/util/ReenableStupidWarnings.h
        kava/Eigen/src/Core/util/StaticAssert.h
        kava/Eigen/src/Core/util/XprHelper.h
        kava/Eigen/src/Core/Array.h
        kava/Eigen/src/Core/ArrayBase.h
        kava/Eigen/src/Core/ArrayWrapper.h
        kava/Eigen/src/Core/Assign.h
        kava/Eigen/src/Core/Assign_MKL.h
        kava/Eigen/src/Core/AssignEvaluator.h
        kava/Eigen/src/Core/BandMatrix.h
        kava/Eigen/src/Core/Block.h
        kava/Eigen/src/Core/BooleanRedux.h
        kava/Eigen/src/Core/CommaInitializer.h
        kava/Eigen/src/Core/ConditionEstimator.h
        kava/Eigen/src/Core/CoreEvaluators.h
        kava/Eigen/src/Core/CoreIterators.h
        kava/Eigen/src/Core/CwiseBinaryOp.h
        kava/Eigen/src/Core/CwiseNullaryOp.h
        kava/Eigen/src/Core/CwiseTernaryOp.h
        kava/Eigen/src/Core/CwiseUnaryOp.h
        kava/Eigen/src/Core/CwiseUnaryView.h
        kava/Eigen/src/Core/DenseBase.h
        kava/Eigen/src/Core/DenseCoeffsBase.h
        kava/Eigen/src/Core/DenseStorage.h
        kava/Eigen/src/Core/Diagonal.h
        kava/Eigen/src/Core/DiagonalMatrix.h
        kava/Eigen/src/Core/DiagonalProduct.h
        kava/Eigen/src/Core/Dot.h
        kava/Eigen/src/Core/EigenBase.h
        kava/Eigen/src/Core/ForceAlignedAccess.h
        kava/Eigen/src/Core/Fuzzy.h
        kava/Eigen/src/Core/GeneralProduct.h
        kava/Eigen/src/Core/GenericPacketMath.h
        kava/Eigen/src/Core/GlobalFunctions.h
        kava/Eigen/src/Core/Inverse.h
        kava/Eigen/src/Core/IO.h
        kava/Eigen/src/Core/Map.h
        kava/Eigen/src/Core/MapBase.h
        kava/Eigen/src/Core/MathFunctions.h
        kava/Eigen/src/Core/MathFunctionsImpl.h
        kava/Eigen/src/Core/Matrix.h
        kava/Eigen/src/Core/MatrixBase.h
        kava/Eigen/src/Core/NestByValue.h
        kava/Eigen/src/Core/NoAlias.h
        kava/Eigen/src/Core/NumTraits.h
        kava/Eigen/src/Core/PermutationMatrix.h
        kava/Eigen/src/Core/PlainObjectBase.h
        kava/Eigen/src/Core/Product.h
        kava/Eigen/src/Core/ProductEvaluators.h
        kava/Eigen/src/Core/Random.h
        kava/Eigen/src/Core/Redux.h
        kava/Eigen/src/Core/Ref.h
        kava/Eigen/src/Core/Replicate.h
        kava/Eigen/src/Core/ReturnByValue.h
        kava/Eigen/src/Core/Reverse.h
        kava/Eigen/src/Core/Select.h
        kava/Eigen/src/Core/SelfAdjointView.h
        kava/Eigen/src/Core/SelfCwiseBinaryOp.h
        kava/Eigen/src/Core/Solve.h
        kava/Eigen/src/Core/SolverBase.h
        kava/Eigen/src/Core/SolveTriangular.h
        kava/Eigen/src/Core/StableNorm.h
        kava/Eigen/src/Core/Stride.h
        kava/Eigen/src/Core/Swap.h
        kava/Eigen/src/Core/Transpose.h
        kava/Eigen/src/Core/Transpositions.h
        kava/Eigen/src/Core/TriangularMatrix.h
        kava/Eigen/src/Core/VectorBlock.h
        kava/Eigen/src/Core/VectorwiseOp.h
        kava/Eigen/src/Core/Visitor.h
        kava/Eigen/src/Eigenvalues/ComplexEigenSolver.h
        kava/Eigen/src/Eigenvalues/ComplexSchur.h
        kava/Eigen/src/Eigenvalues/ComplexSchur_LAPACKE.h
        kava/Eigen/src/Eigenvalues/EigenSolver.h
        kava/Eigen/src/Eigenvalues/GeneralizedEigenSolver.h
        kava/Eigen/src/Eigenvalues/GeneralizedSelfAdjointEigenSolver.h
        kava/Eigen/src/Eigenvalues/HessenbergDecomposition.h
        kava/Eigen/src/Eigenvalues/MatrixBaseEigenvalues.h
        kava/Eigen/src/Eigenvalues/RealQZ.h
        kava/Eigen/src/Eigenvalues/RealSchur.h
        kava/Eigen/src/Eigenvalues/RealSchur_LAPACKE.h
        kava/Eigen/src/Eigenvalues/SelfAdjointEigenSolver.h
        kava/Eigen/src/Eigenvalues/SelfAdjointEigenSolver_LAPACKE.h
        kava/Eigen/src/Eigenvalues/Tridiagonalization.h
        kava/Eigen/src/Geometry/arch/Geometry_SSE.h
        kava/Eigen/src/Geometry/AlignedBox.h
        kava/Eigen/src/Geometry/AngleAxis.h
        kava/Eigen/src/Geometry/EulerAngles.h
        kava/Eigen/src/Geometry/Homogeneous.h
        kava/Eigen/src/Geometry/Hyperplane.h
        kava/Eigen/src/Geometry/OrthoMethods.h
        kava/Eigen/src/Geometry/ParametrizedLine.h
        kava/Eigen/src/Geometry/Quaternion.h
        kava/Eigen/src/Geometry/Rotation2D.h
        kava/Eigen/src/Geometry/RotationBase.h
        kava/Eigen/src/Geometry/Scaling.h
        kava/Eigen/src/Geometry/Transform.h
        kava/Eigen/src/Geometry/Translation.h
        kava/Eigen/src/Geometry/Umeyama.h
        kava/Eigen/src/Householder/BlockHouseholder.h
        kava/Eigen/src/Householder/Householder.h
        kava/Eigen/src/Householder/HouseholderSequence.h
        kava/Eigen/src/IterativeLinearSolvers/BasicPreconditioners.h
        kava/Eigen/src/IterativeLinearSolvers/BiCGSTAB.h
        kava/Eigen/src/IterativeLinearSolvers/ConjugateGradient.h
        kava/Eigen/src/IterativeLinearSolvers/IncompleteCholesky.h
        kava/Eigen/src/IterativeLinearSolvers/IncompleteLUT.h
        kava/Eigen/src/IterativeLinearSolvers/IterativeSolverBase.h
        kava/Eigen/src/IterativeLinearSolvers/LeastSquareConjugateGradient.h
        kava/Eigen/src/IterativeLinearSolvers/SolveWithGuess.h
        kava/Eigen/src/Jacobi/Jacobi.h
        kava/Eigen/src/LU/arch/Inverse_SSE.h
        kava/Eigen/src/LU/Determinant.h
        kava/Eigen/src/LU/FullPivLU.h
        kava/Eigen/src/LU/InverseImpl.h
        kava/Eigen/src/LU/PartialPivLU.h
        kava/Eigen/src/LU/PartialPivLU_LAPACKE.h
        kava/Eigen/src/MetisSupport/MetisSupport.h
        kava/Eigen/src/misc/blas.h
        kava/Eigen/src/misc/Image.h
        kava/Eigen/src/misc/Kernel.h
        kava/Eigen/src/misc/lapack.h
        kava/Eigen/src/misc/lapacke.h
        kava/Eigen/src/misc/lapacke_mangling.h
        kava/Eigen/src/misc/RealSvd2x2.h
        kava/Eigen/src/OrderingMethods/Amd.h
        kava/Eigen/src/OrderingMethods/Eigen_Colamd.h
        kava/Eigen/src/OrderingMethods/Ordering.h
        kava/Eigen/src/PardisoSupport/PardisoSupport.h
        kava/Eigen/src/PaStiXSupport/PaStiXSupport.h
        kava/Eigen/src/plugins/ArrayCwiseBinaryOps.h
        kava/Eigen/src/plugins/ArrayCwiseUnaryOps.h
        kava/Eigen/src/plugins/BlockMethods.h
        kava/Eigen/src/plugins/CommonCwiseBinaryOps.h
        kava/Eigen/src/plugins/CommonCwiseUnaryOps.h
        kava/Eigen/src/plugins/MatrixCwiseBinaryOps.h
        kava/Eigen/src/plugins/MatrixCwiseUnaryOps.h
        kava/Eigen/src/QR/ColPivHouseholderQR.h
        kava/Eigen/src/QR/ColPivHouseholderQR_LAPACKE.h
        kava/Eigen/src/QR/CompleteOrthogonalDecomposition.h
        kava/Eigen/src/QR/FullPivHouseholderQR.h
        kava/Eigen/src/QR/HouseholderQR.h
        kava/Eigen/src/QR/HouseholderQR_LAPACKE.h
        kava/Eigen/src/SparseCholesky/SimplicialCholesky.h
        kava/Eigen/src/SparseCholesky/SimplicialCholesky_impl.h
        kava/Eigen/src/SparseCore/AmbiVector.h
        kava/Eigen/src/SparseCore/CompressedStorage.h
        kava/Eigen/src/SparseCore/ConservativeSparseSparseProduct.h
        kava/Eigen/src/SparseCore/MappedSparseMatrix.h
        kava/Eigen/src/SparseCore/SparseAssign.h
        kava/Eigen/src/SparseCore/SparseBlock.h
        kava/Eigen/src/SparseCore/SparseColEtree.h
        kava/Eigen/src/SparseCore/SparseCompressedBase.h
        kava/Eigen/src/SparseCore/SparseCwiseBinaryOp.h
        kava/Eigen/src/SparseCore/SparseCwiseUnaryOp.h
        kava/Eigen/src/SparseCore/SparseDenseProduct.h
        kava/Eigen/src/SparseCore/SparseDiagonalProduct.h
        kava/Eigen/src/SparseCore/SparseDot.h
        kava/Eigen/src/SparseCore/SparseFuzzy.h
        kava/Eigen/src/SparseCore/SparseMap.h
        kava/Eigen/src/SparseCore/SparseMatrix.h
        kava/Eigen/src/SparseCore/SparseMatrixBase.h
        kava/Eigen/src/SparseCore/SparsePermutation.h
        kava/Eigen/src/SparseCore/SparseProduct.h
        kava/Eigen/src/SparseCore/SparseRedux.h
        kava/Eigen/src/SparseCore/SparseRef.h
        kava/Eigen/src/SparseCore/SparseSelfAdjointView.h
        kava/Eigen/src/SparseCore/SparseSolverBase.h
        kava/Eigen/src/SparseCore/SparseSparseProductWithPruning.h
        kava/Eigen/src/SparseCore/SparseTranspose.h
        kava/Eigen/src/SparseCore/SparseTriangularView.h
        kava/Eigen/src/SparseCore/SparseUtil.h
        kava/Eigen/src/SparseCore/SparseVector.h
        kava/Eigen/src/SparseCore/SparseView.h
        kava/Eigen/src/SparseCore/TriangularSolver.h
        kava/Eigen/src/SparseLU/SparseLU.h
        kava/Eigen/src/SparseLU/SparseLU_column_bmod.h
        kava/Eigen/src/SparseLU/SparseLU_column_dfs.h
        kava/Eigen/src/SparseLU/SparseLU_copy_to_ucol.h
        kava/Eigen/src/SparseLU/SparseLU_gemm_kernel.h
        kava/Eigen/src/SparseLU/SparseLU_heap_relax_snode.h
        kava/Eigen/src/SparseLU/SparseLU_kernel_bmod.h
        kava/Eigen/src/SparseLU/SparseLU_Memory.h
        kava/Eigen/src/SparseLU/SparseLU_panel_bmod.h
        kava/Eigen/src/SparseLU/SparseLU_panel_dfs.h
        kava/Eigen/src/SparseLU/SparseLU_pivotL.h
        kava/Eigen/src/SparseLU/SparseLU_pruneL.h
        kava/Eigen/src/SparseLU/SparseLU_relax_snode.h
        kava/Eigen/src/SparseLU/SparseLU_Structs.h
        kava/Eigen/src/SparseLU/SparseLU_SupernodalMatrix.h
        kava/Eigen/src/SparseLU/SparseLU_Utils.h
        kava/Eigen/src/SparseLU/SparseLUImpl.h
        kava/Eigen/src/SparseQR/SparseQR.h
        kava/Eigen/src/SPQRSupport/SuiteSparseQRSupport.h
        kava/Eigen/src/StlSupport/details.h
        kava/Eigen/src/StlSupport/StdDeque.h
        kava/Eigen/src/StlSupport/StdList.h
        kava/Eigen/src/StlSupport/StdVector.h
        kava/Eigen/src/SuperLUSupport/SuperLUSupport.h
        kava/Eigen/src/SVD/BDCSVD.h
        kava/Eigen/src/SVD/JacobiSVD.h
        kava/Eigen/src/SVD/JacobiSVD_LAPACKE.h
        kava/Eigen/src/SVD/SVDBase.h
        kava/Eigen/src/SVD/UpperBidiagonalization.h
        kava/Eigen/src/UmfPackSupport/UmfPackSupport.h
        kava/layers/DataLayer.cpp
        kava/layers/DataLayer.h
        kava/layers/InnerProductLayer.cpp
        kava/layers/InnerProductLayer.h
        kava/layers/Layer.cpp
        kava/layers/Layer.h
        kava/Blob.cpp
        kava/Blob.h
        kava/Kava.cpp
        kava/Kava.h
        main.cpp kava/layers/EuclideanLossLayer.cpp kava/layers/EuclideanLossLayer.h kava/layers/MNISTDataLayer.cpp kava/layers/MNISTDataLayer.h kava/layers/SoftmaxWithLossLayer.cpp kava/layers/SoftmaxWithLossLayer.h kava/layers/ReLULayer.cpp kava/layers/ReLULayer.h kava/utils/FileUtils.cpp kava/utils/FileUtils.h kava/utils/MathUtils.cpp kava/utils/MathUtils.h kava/weightfillers/WeightFiller.cpp kava/weightfillers/WeightFiller.h kava/weightfillers/ConstantWeightFiller.cpp kava/weightfillers/ConstantWeightFiller.h kava/weightfillers/MSRAWeightFiller.cpp kava/weightfillers/MSRAWeightFiller.h kava/weightfillers/XavierWeightFiller.cpp kava/weightfillers/XavierWeightFiller.h kava/weightfillers/GaussianWeightFiller.cpp kava/weightfillers/GaussianWeightFiller.h kava/utils/RandomUtils.cpp kava/utils/RandomUtils.h kava/layers/ConvolutionalLayer.cpp kava/layers/ConvolutionalLayer.h)

add_executable(kava_cpp ${SOURCE_FILES} ${SOURCES})